# mapfaster

./: .gitattributes  .gitignore  Makefile  Makefile.config  README.md  benchmark.py  pyproject.toml
dataset/dataframes/: maps_analytics.csv
history/: README.md
models/: README.md
scripts/: format.sh  generate-docs.sh  lint.sh  test.sh
src/: dataloader.py  loss.py  metrics.py  transform.py  utils.py
src/model/: mapfaster.py  modules.py
tests/: test_dataloader.py
tests/dataset/: test_dataset.py
